configuration files is edited

--- a/nginx/nginx3.conf
+++ b/nginx/nginx3.conf
@@ -3,13 +3,15 @@ events { }
 #Define which servers to include in the load balancing scheme.
 
 http {
-       
+       upstream app {
+               server 192.168.0.103;
+       } 
        
       server  {
               listen 80;
               server_name 192.168.0.103;
               location /{
-                      proxy_pass http://192.168.0.103:5000;
+                      proxy_pass http://192.168.0.103;
               }
       }
 }
