--- a/app/Dockerfile2
+++ b/app/Dockerfile2
@@ -13,5 +13,5 @@ COPY templates templates
 
 EXPOSE 5000
 
-CMD [ "gunicorn",  "--bind", "0.0.0.0:5000", "app:app" ]
+CMD [ "gunicorn", -"w 4", "--bind", "0.0.0.0:5000", "app:app" ]
 
