--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,16 @@
-events { }
+
 
 #Define which servers to include in the load balancing scheme.
 
-http {
+
        
        
       server  {
               listen 80;
-              server_name 192.168.0.103;
+              server_name app;
               location /{
-                      proxy_pass http://192.168.0.103:5000;
+                      proxy_pass http://app:5000;
               }
       }
-}
+
 
